tests/ui/lang/core/ptr/allocate_const_scalar.stderr
error: pointer has non-null integer address
   |
note: used from within `allocate_const_scalar::main`
  --> $DIR/allocate_const_scalar.rs:16:5
   |
16 |     *output = POINTER;
   |     ^^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/allocate_const_scalar.rs:15:8
   |
15 | pub fn main(output: &mut Unique<[u8; 4]>) {
   |        ^^^^

error: aborting due to 1 previous error

